--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "scripts": {
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "start": "react-scripts start",
-    "postbuild": "react-snap"
+    "postbuild": "react-snap",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.9.0",
     "eztore": "^2.0.0",
+    "phaser": "^3.22.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "^3.4.0"
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "react-snap": "^1.23.0"
   },
   "reactSnap": {
@@ -40,5 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://javi11292.github.io/pokemon/"
 }
