--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Client",
-  "name": "Client",
+  "short_name": "Pokemon",
+  "name": "Pokemon",
   "icons": [
     {
       "src": "logo192.png",
