--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.9.0",
     "eztore": "^2.0.0",
-    "phaser": "^3.22.0",
+    "pixi.js": "^5.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "^3.4.0"
