--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.9.0",
     "eztore": "^2.0.0",
+    "localforage": "^1.7.3",
     "pixi.js": "^5.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
